# solfleet

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  PLAN.md  README.md  fleet.example.yaml  policy.example.yaml  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
docs/: provisioning-and-ux.md
src/solfleet/: audit.py  builder.py  cli.py  config.py  dns.py  executor.py  mcp_server.py  operations.py  probe.py  provision.py  safety.py  schedule.py  validate.py  voting.py  watch.py
tests/: test_audit.py  test_bootstrap.py  test_builder.py  test_config.py  test_dns.py  test_dns_ops.py  test_executor.py  test_operations.py  test_probe.py  test_provision.py  test_safety.py  test_schedule.py  test_validate.py  test_voting.py  test_watch.py
