[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solfleet"
version = "0.1.1"
description = "Agent-safe fleet management for independent Solana validators and RPC nodes"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Sanjeev Kumar" }]
keywords = ["solana", "validator", "rpc", "mcp", "agave", "sre", "devops", "dns-failover", "infrastructure"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]
route53 = ["boto3>=1.34"]  # only needed when dns.provider = route53

[project.urls]
Homepage = "https://github.com/sanjeevkkansal/solfleet"
Repository = "https://github.com/sanjeevkkansal/solfleet"
Issues = "https://github.com/sanjeevkkansal/solfleet/issues"

[project.scripts]
solfleet = "solfleet.cli:main"
solfleet-mcp = "solfleet.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/solfleet"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
